bug: add padding to remove overlapping

--- a/src/LegalGPT/LegalGPT.module.css
+++ b/src/LegalGPT/LegalGPT.module.css
@@ -177,7 +177,7 @@
     border-radius: 0;
   }
   .formContainer {
-    padding: 25px 5px 40px 5px;
+    padding: 80px 0 40px 0;
   }
   .container {
     padding: 0;
